# twenty

binomialSolver/ide/binomialSolver/: .cproject  .project
memoryAccurate/: build_memory_accurate.sh  build_msm_anonymous.sh  build_msm_history.sh  build_msm_internal.sh  build_msm_orthogonal_deferred2.sh  build_msm_sub.sh  memory_accurate.cpp  msm_anonymous.cpp  msm_history.cpp  msm_internal.cpp  msm_more_row_types.cpp  msm_orthogonal_deferred.cpp  msm_orthogonal_deferred2.cpp  msm_pseudo_entry.cpp  msm_sub.cpp  msm_test_internal.cpp
memoryAccurate/app/: CMemAccuUI.cpp  CMemAccuUI.h  Makefile  MemoryAccurate.cbp  MemoryAccurate.depend  MemoryAccurate.layout  architecture.h  main.cpp
memoryAccurate/design/: LotusMemory.txt  QA_autocompletion.txt  architecture_ncurses_app.txt  architecture_top_level.txt  base_autocomplete.txt  base_theory.txt  curses_cmdline.txt  curses_ui_components.txt  design_multiple_windows.txt  mem_accurage_uml.zargo  methodology.txt  pyramid_tree.txt
memoryAccurate/references/: QA.txt  design.txt
memoryAccurate/src/: CMakeLists.txt  Makefile  memaccu.cpp  memaccu.h.in
s88/: .cproject  .project  TODO.txt  flowchart.py  main.py  practice_unit.py
s88/src/: CTestSM.cpp  CTestSM.h  IMemoryRegion.h  IMemoryUnit.cpp  IMemoryUnit.h  ioutbox.h  s88.cpp
s88_codeblock/: main.cpp  s88_codeblock.cbp  s88_codeblock.depend  s88_codeblock.layout
s88_codeblock/include/: CSMExplicitEntry.h  CSMInternal.h  CTestSM.h
s88_codeblock/src/: CSMExplicitEntry.cpp  CSMInternal.cpp  CTestSM.cpp
stackexchange/binominal/: prob_test.py
(+103 files in other folders)
